# toybox

./: .gitignore  AGENTS.md  Cargo.toml  MEMORY.md  README.md
benches/: oversampling.rs
examples/minimal-clap/: Cargo.toml  build.rs
examples/minimal-clap/src/: lib.rs
examples/minimal-vst3/: Cargo.toml  build.rs
examples/minimal-vst3/src/: constants.rs  controller.rs  factory.rs  lib.rs  params.rs  processor.rs  state_io.rs  view.rs
patchbay-gui/: Cargo.toml
patchbay-gui/src/: canvas.rs  declarative.rs  frame_capture.rs  host.rs  host_non_windows.rs  lib.rs  logging.rs  renderer.rs  screenshot.rs  shader.wgsl  ui.rs  vector_scene.rs  win32.rs
patchbay-gui/src/canvas/: bitmap_font.rs  canvas_arc_raster_methods.rs  canvas_blit_and_text_methods.rs  canvas_shape_raster_methods.rs  canvas_storage_and_core_methods.rs  color_geometry_types.rs  mod.rs  tests.rs
patchbay-gui/src/canvas/font/: bitmap.rs
patchbay-gui/src/canvas/raster/: shape.rs
patchbay-gui/src/canvas/types/: color_geometry.rs
patchbay-gui/src/declarative/: debug_selection_and_validation.rs  errors_actions_root_render.rs  flex_and_grid_layout_types.rs  layout_geometry_and_formatting.rs  measure_and_render_dispatch.rs  mod.rs  node_builders_and_sections.rs  part_000.rs  part_001.rs  part_003.rs  part_004.rs  part_005.rs  part_007.rs  part_008.rs  part_009.rs  part_010.rs  part_011.rs  render_entry_and_debug_candidates.rs  render_grid_absolute_and_tracks.rs  render_panel_and_flex.rs  render_widgets_and_regions.rs  root_spec_and_node.rs  widget_specs_b_and_tokens.rs
patchbay-gui/src/declarative/contracts/: curve_editor.rs  eq_attractor_surface.rs  errors.rs  layout_diagnostic.rs  layout_engine.rs  node_id.rs  render_result.rs  root_transform.rs  ui_actions.rs
patchbay-gui/src/declarative/debug/: border_selection.rs
patchbay-gui/src/declarative/helpers/: node_constructors.rs  section_layout_builders.rs  slot_layout_builders.rs
patchbay-gui/src/declarative/layout/: box_types.rs  overflow_and_diagnostics.rs
patchbay-gui/src/declarative/measurement/: axis_constraints.rs  cached.rs  containers.rs  grid.rs  root_frame.rs  widgets.rs
patchbay-gui/src/declarative/node/: builders.rs  sections.rs  slots.rs  types.rs
patchbay-gui/src/declarative/render/: absolute.rs  align_box.rs  aspect_box.rs  dispatch.rs  eq_attractor_surface.rs  label.rs  padding_box.rs  panel.rs  region.rs  scroll_view.rs  stack.rs  switch_layout.rs  text_box.rs  widgets.rs  wrap.rs
patchbay-gui/src/declarative/root/: spec.rs
patchbay-gui/src/declarative/specs/: absolute_spec.rs  align_box_spec.rs  aspect_box_spec.rs  curve_editor_spec.rs  eq_attractor_surface_spec.rs  grid_spec.rs  grid_template.rs  knob_slider.rs  knob_spec.rs  label_spec.rs  padding_box_spec.rs  panel_spec.rs  scroll_view_spec.rs  spacer_spec.rs  stack_spec.rs  switch_layout_spec.rs  text_box_spec.rs  toggle_button_dropdown_region_indicator.rs  wrap_spec.rs
patchbay-gui/src/declarative/tests/: aspect_box_tests.rs  cache_and_slot_invariant_tests.rs  containers_and_engine_tests.rs  debug_borders_tests.rs  eq_attractor_surface_interaction_tests.rs  golden_layout_rect_tests.rs  grid_basics_tests.rs  grid_sizing_tests.rs  grid_template_tests.rs  helpers_and_measurement.rs  layout_property_sweep_tests.rs  measurement_axis_tests.rs  mod.rs  node_constructor_tests.rs  overflow_policy_and_diagnostics.rs  part_000.rs  part_001.rs  part_004.rs  part_005.rs  per_node_layout_diagnostics_tests.rs  region_and_panel_behavior.rs  root_interaction_tests.rs  root_render_plan_tests.rs  root_transform_and_interaction.rs  scene_frame_tests.rs  section_fraction_axis_tests.rs  section_fraction_tiling.rs  section_helper_tests.rs  section_tiling_layout_assertions.rs  single_slot_container_tests.rs  slot_fraction_axis_tests.rs  slot_fraction_tiling.rs  slot_helper_tests.rs  slot_tiling_layout_assertions.rs  slot_tiling_layout_helpers.rs  stress_extreme_layout_tests.rs  structural_gap_diagnostics_tests.rs  switch_layout_tests.rs  validation_error_tests.rs  (+4 more)
patchbay-gui/src/host/: errors.rs  mod.rs  requests.rs  types.rs  window.rs
patchbay-gui/src/host_non_windows/: errors.rs  mod.rs  requests.rs  types.rs  window.rs
patchbay-gui/src/renderer/: mod.rs  renderer_device_initialization.rs  renderer_lifecycle.rs  renderer_upload_and_present.rs  tests.rs
patchbay-gui/src/ui/: control_responses.rs  geometry_helpers.rs  layout_types.rs  mod.rs  text_helpers.rs  theme_types.rs  ui_core_methods.rs  ui_dropdown_methods.rs  ui_dropdown_rect_methods.rs  ui_knob_geometry_methods.rs  ui_knob_methods.rs  ui_knob_types.rs  ui_overlay_input_methods.rs  ui_panel_grid_methods.rs  ui_pointer_helpers.rs  ui_slider_methods.rs  ui_state_types.rs  ui_text_methods.rs  ui_toggle_button_methods.rs
patchbay-gui/src/vector/: mod.rs
patchbay-gui/src/vector_scene/: mod.rs  vector_scene_font_loading.rs  vector_scene_knob_rendering.rs  vector_scene_text_rendering.rs  vector_scene_types.rs
patchbay-gui/src/win32/: message_dispatch.rs  mod.rs  render_loop.rs  resize_helpers.rs  tests.rs  thread_spawn.rs  thread_spawn_context.rs  thread_spawn_helpers.rs  thread_spawn_renderer.rs  thread_spawn_state_build.rs  thread_spawn_window_class.rs  win32_utils.rs  window_handle_types.rs  window_proc.rs  window_state_core.rs  window_state_drop.rs  window_state_sizing_input.rs
patchbay-gui/tests/: compile_fail.rs
patchbay-gui/tests/ui/: container_layout_rejects_layoutbox.rs  container_layout_rejects_layoutbox.stderr  grid_kind_field_is_private.rs  grid_kind_field_is_private.stderr  layout_box_struct_literal_private.rs  layout_box_struct_literal_private.stderr  layout_diagnostic_constraint_normalized_removed.rs  layout_diagnostic_constraint_normalized_removed.stderr  layout_engine_state_legacy_mark_dirty_removed.rs  layout_engine_state_legacy_mark_dirty_removed.stderr  layout_engine_state_struct_literal_private.rs  layout_engine_state_struct_literal_private.stderr  panel_spec_struct_literal_private.rs  panel_spec_struct_literal_private.stderr  root_frame_spec_new_is_private.rs  root_frame_spec_new_is_private.stderr
(+291 files in other folders)
