[package]
name = "toybox"
version = "0.1.0"
edition = "2024"

[dependencies]
clack-plugin = { git = "https://github.com/prokopyl/clack.git", package = "clack-plugin" }
clack-extensions = { git = "https://github.com/prokopyl/clack.git", package = "clack-extensions", features = ["params", "clack-plugin", "audio-ports", "note-ports", "state", "gui", "raw-window-handle_05"] }
clack-common = { git = "https://github.com/prokopyl/clack.git", package = "clack-common" }
mts_esp = { git = "https://github.com/PORTALSURFER/mts-esp-rs", package = "mts-esp-rs" }
patchbay-gui = { path = "patchbay-gui", version = "0.1.0", optional = true }
raw-window-handle = { version = "0.5.2", optional = true }

[features]
default = []
gui = ["dep:patchbay-gui", "dep:raw-window-handle"]

[lints]
workspace = true

[workspace]
members = ["patchbay-gui", "examples/minimal-clap"]

[workspace.lints.rust]
warnings = "deny"
missing_docs = "deny"

[workspace.lints.rustdoc]
missing_crate_level_docs = "deny"

[workspace.lints.clippy]
missing_docs_in_private_items = "deny"
