[package]
name = "toybox"
version = "0.1.0"
edition = "2024"

[dependencies]
clack-plugin = { git = "https://github.com/prokopyl/clack.git", rev = "36602d61bb192e2779a68fddf985e7664f161fb1", package = "clack-plugin" }
clack-extensions = { git = "https://github.com/prokopyl/clack.git", rev = "36602d61bb192e2779a68fddf985e7664f161fb1", package = "clack-extensions", features = ["params", "clack-plugin", "audio-ports", "note-ports", "state", "gui", "raw-window-handle_05"] }
clack-common = { git = "https://github.com/prokopyl/clack.git", rev = "36602d61bb192e2779a68fddf985e7664f161fb1", package = "clack-common" }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
mts_esp = { git = "https://github.com/PORTALSURFER/mts-esp-rs", rev = "d107a979e44c1b16dcc72dfd47cdd8dac77854ca", package = "mts-esp-rs" }
patchbay-gui = { path = "patchbay-gui", version = "0.1.0", optional = true }
raw-window-handle = { version = "0.5.2", optional = true }
toybox-vst3-ffi = { path = "crates/vst3-ffi", optional = true }
toybox-process-log = { path = "crates/process-log" }

[features]
default = []
gui = ["dep:patchbay-gui", "dep:raw-window-handle"]
screenshot-test = ["gui", "dep:image", "patchbay-gui/frame-capture"]
vst3 = ["dep:toybox-vst3-ffi"]

[lints]
workspace = true

[workspace]
members = [
    "crates/process-log",
    "crates/vst3-ffi",
    "patchbay-gui",
    "examples/minimal-clap",
    "examples/minimal-vst3",
]

[workspace.lints.rust]
warnings = "deny"
missing_docs = "deny"

[workspace.lints.rustdoc]
missing_crate_level_docs = "deny"

[workspace.lints.clippy]
missing_docs_in_private_items = "deny"
