[package]
name = "toybox"
version = "0.1.0"
edition = "2024"

[dependencies]
clack-plugin = { git = "https://github.com/prokopyl/clack.git", rev = "36602d61bb192e2779a68fddf985e7664f161fb1", package = "clack-plugin" }
clack-extensions = { git = "https://github.com/prokopyl/clack.git", rev = "36602d61bb192e2779a68fddf985e7664f161fb1", package = "clack-extensions", features = ["params", "clack-plugin", "audio-ports", "note-ports", "state", "gui", "raw-window-handle_05"] }
clack-common = { git = "https://github.com/prokopyl/clack.git", rev = "36602d61bb192e2779a68fddf985e7664f161fb1", package = "clack-common" }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
mts_esp = { git = "https://github.com/PORTALSURFER/mts-esp-rs", rev = "d107a979e44c1b16dcc72dfd47cdd8dac77854ca", package = "mts-esp-rs" }
patchbay-gui = { path = "patchbay-gui", version = "0.1.0", optional = true }
raw-window-handle = { version = "0.5.2", optional = true }
radiant = { git = "https://github.com/PORTALSURFER/radiant.git", rev = "af6387df13d699a70acc33035c38316ca95261ad", default-features = false, optional = true }
raw-window-handle-06 = { package = "raw-window-handle", version = "0.6", optional = true }
toybox-vst3-ffi = { path = "crates/vst3-ffi", optional = true }
toybox-process-log = { path = "crates/process-log" }

[target.'cfg(target_os = "macos")'.dependencies]
objc = { version = "0.2.7", optional = true }

[features]
default = []
# The legacy `objc` macros probe this cfg internally. Declaring it keeps those
# expansions compatible with Cargo's checked-cfg lint on current toolchains.
cargo-clippy = []
gui = ["dep:patchbay-gui", "dep:raw-window-handle"]
screenshot-test = ["gui", "dep:image", "patchbay-gui/frame-capture"]
vst3 = ["dep:toybox-vst3-ffi"]
radiant-vst3 = ["gui", "vst3", "dep:radiant", "dep:raw-window-handle-06", "dep:objc"]

[lints]
workspace = true

[workspace]
members = [
    "crates/process-log",
    "crates/vst3-ffi",
    "patchbay-gui",
    "examples/minimal-clap",
    "examples/minimal-vst3",
]

[workspace.lints.rust]
warnings = "deny"
missing_docs = "deny"

[workspace.lints.rustdoc]
missing_crate_level_docs = "deny"

[workspace.lints.clippy]
missing_docs_in_private_items = "deny"
