[package]
name = "patchbay-gui"
version = "0.1.0"
edition = "2024"
description = "Minimal CLAP plugin GUI toolkit with a Vulkan-backed renderer"

[dependencies]
raw-window-handle = "0.5.2"
raw-window-handle-06 = { package = "raw-window-handle", version = "0.6" }
wgpu = { version = "0.20", default-features = false, features = ["vulkan", "wgsl"] }
pollster = "0.3"
bytemuck = { version = "1.15", features = ["derive"] }
thiserror = "1.0"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[features]
default = []
