[package]
name = "patchbay-gui"
version = "0.1.0"
edition = "2024"
description = "Minimal CLAP plugin GUI toolkit with a Vulkan-backed renderer"

[dependencies]
raw-window-handle = "0.5.2"
raw-window-handle-06 = { package = "raw-window-handle", version = "0.6" }
wgpu = { version = "28.0.0", default-features = false, features = ["std", "parking_lot", "wgsl", "vulkan"] }
pollster = "0.3"
bytemuck = { version = "1.15", features = ["derive"] }
thiserror = "1.0"
toybox-process-log = { path = "../crates/process-log" }

[features]
default = []

[lints]
workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", default-features = false, features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
