[package]
name = "patchbay-gui"
version = "0.1.0"
edition = "2024"
description = "Minimal CLAP plugin GUI toolkit with a Vello-backed renderer"

[dependencies]
raw-window-handle = "0.5.2"
raw-window-handle-06 = { package = "raw-window-handle", version = "0.6" }
wgpu = { version = "27.0.1", default-features = false, features = ["std", "parking_lot", "wgsl", "vulkan"] }
vello = "0.7.0"
pollster = "0.3"
thiserror = "1.0"
skrifa = "0.40"
toybox-process-log = { path = "../crates/process-log" }

[features]
default = ["layout-debug-borders"]
layout-debug-borders = []
layout-overflow-warnings = []

[lints]
workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", default-features = false, features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
