[package]
name = "toybox-minimal-vst3"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
toybox = { path = "../..", features = ["vst3"] }

[build-dependencies]
toybox = { path = "../..", features = ["vst3"] }

[lints]
workspace = true
